# C-plus-plus-codes

./: #270a.cpp  #467b.cpp  1.cpp  2.cpp  34449669.cpp  CMakeLists.txt  Untitled1.cpp  Untitled2.cpp  ideone_2myOOp.cpp  ideone_9CPYvD.cpp  ideone_a5pUly.cpp  main.cpp  main1.cpp  tempCodeRunnerFile.cpp  tryouts.cpp
Atcoder/: RC123_a.cpp  RC123_b.cpp
Atcoder/Beginner Contest 052/: a.cpp  b.cpp  c.cpp  d.cpp
Atcoder/Beginner Contest 053/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 185/: A.cpp  B.cpp  C.cpp  D.cpp
Atcoder/Beginner Contest 187/: A.cpp
Atcoder/Beginner Contest 190/: A.cpp
Atcoder/Beginner Contest 194/: A.cpp
Atcoder/Beginner Contest 199/: a.cpp  b.cpp  d.cpp
Atcoder/Beginner Contest 200/: a.cpp  b.cpp  c.cpp  d.cpp
Atcoder/Beginner Contest 201/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 202/: a.cpp  b.cpp
Atcoder/Beginner Contest 203/: a.cpp  b.cpp
Atcoder/Beginner Contest 204/: a.cpp  b.cpp
Atcoder/Beginner Contest 205/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 206/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 207/: a.cpp  b.cpp
Atcoder/Beginner Contest 208/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 209/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 210/: a.cpp  b.cpp  c.cpp  d.cpp
Atcoder/Beginner Contest 211/: a.cpp  b.cpp
Atcoder/Beginner Contest 230/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 231/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 232/: a.cpp  b.cpp  tempCodeRunnerFile.cpp
Atcoder/Beginner Contest 235/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 236/: a.cpp  b.cpp  c.cpp
Atcoder/Beginner Contest 240/: a.cpp  b.cpp  c.cpp
Atcoder/Educational DP Contest/: A.cpp  n slimes.cpp
Atcoder/Practice Contest/: a.cpp
Atcoder/Regular Contest 117/: a.cpp
Atcoder/Regular Contest 119/: a.cpp
Codechef/: ALLDIV3.cpp  BLITZ3_2.cpp  CARVANS.cpp  CHARGES.cpp  CHFHEIST.cpp  CHFRICH.cpp  CIELAB.cpp  CIRCLEGAME.cpp  CLEANUP.cpp  COCONUT.cpp  COINS.cpp  CONFLIP.cpp  CORTSENT.cpp  CTIME.cpp  CYCLICQD.cpp  DISABLEDKING.cpp  FALSNUM.cpp  GRIDXOR.cpp  HORSES.cpp  HTMLTAGS.cpp  JOHNY.cpp  LAZYCHF.cpp  MARBLES.cpp  MAXDIFF.cpp  MISSSUMS.cpp  MSTICK.cpp  NAME2.cpp  NUM239.cpp  ODDSEVENS.cpp  PASSWD.cpp  POGOSTCK.cpp  QUIZPLAG.cpp  SLPCYCLE.cpp  STONES.cpp  SUMPARITY.cpp  TANDJ1.cpp  TOTCRT.cpp  TOTR.cpp  VISA.cpp  chefsetc.cpp  (+8 more)
Codechef/April CodeChef Starters 2021 Division 3 (Rated)/: CCISLAND.cpp  HIRETEST.cpp  TANDP.cpp
Codechef/April CookOff 2021/: BUILDB.cpp  CM164364.cpp  OROFAND.cpp  psgrade.cpp
Codechef/April Long Challenge 2021/: bolt.cpp  sdice.cpp  socks1.cpp  sscript.cpp
Codechef/April Lunchtime 2021/: ARRROT.cpp  BENCHP.cpp  CCHEAVEN.cpp  EQUINOX.cpp  SLOOP.cpp
Codechef/August Long Challenge/: CHEFWARS.cpp  CRDGAME3.cpp  LINCHESS.cpp  SKMP.cpp
Codechef/Code Shake 2.0/: COLLECT0.cpp  COVIN.cpp  GUESIT99.cpp  INDX12.cpp  KRAFT.cpp  MAKEIT.cpp  UNLKIT.cpp  UNWNT.cpp
Codechef/CodeChef Starters 21 Division 2 (Rated)/: ANDORUNI.cpp  CHEFGRD.cpp  CHEFWM.cpp  COVID_19.cpp  DEVSPORTS.cpp
Codechef/CodeChef Starters 6 Division 3/: CRICRANK.cpp  ETUP_unchecked.cpp  JOKRBTMN.cpp  THREDICE.cpp
Codechef/CodeChef Starters 7 Division 2/: CEILSUM.cpp  CHSFORMT.cpp  FODCHAIN.cpp
Codechef/Codesprint/: EMPRNM.cpp  GOATRIP.cpp  PROBRGN.cpp  STCKSCAM.cpp
Codechef/December Cook Off/: ATTENDU.cpp  Untitled1.cpp
Codechef/December Cook-Off 2021 Division 2/: BINSTRGAME.cpp  MEDMIN.cpp  MUSICHAIR.cpp
Codechef/December Long Challenge 2020/: POSPREFS.cpp  VACCINE1.cpp  VACCINE2.cpp  evenpsum.cpp
Codechef/Encoding December 2020/: ENDEC1.cpp  ENDEC2.cpp  ENDEC4.cpp  ENDEC5.cpp
Codechef/FizzBuzz Division 2/: CAN_REACH.cpp  MKGPLNKS.cpp  SUBMIMX.cpp
Codechef/January Cook-Off 2022/: mergelis.cpp  nopal.cpp  segdiv.cpp
Codechef/January Long Challenge 2021/: billrd.cpp  decodeit.cpp  divthree.cpp  fairelect.cpp
Codechef/July Long Challenge/: ADAKING.cpp  CHEFSTR!.cpp  CHFNSWPS.cpp  CRDGAME.cpp  DRCHEF.cpp  PTMSSNG.cpp
Codechef/March Cook Off 2021/: guessit.cpp  pawri.cpp  weightbl.cpp
Codechef/March Long Challenge 2021/: groups.cpp  notime.cpp
Codechef/March Starters 2021/: colglf5.cpp  start2c.cpp  t20mch.cpp
Codechef/May Cook-Off 2021/: MARARUN.cpp  P7SWAPS.cpp  TLAPM.cpp  VACCINE3.cpp
Codechef/May Long Challenge 2021/: LKDNGOLF.cpp  SOLBLTY.cpp
Codechef/November Cook Off/: IPCCERT.cpp  flip.cpp
Codechef/November Long Challenge/: ADADISH.cpp
Codechef/November Lunchtime/: BEGGASOL.cpp  Gasoline.cpp
Codechef/September Long Challenge/: EQDIV_wrong.cpp
Codechef/noob_coding/: Untitled1.cpp  Untitled2.cpp
Codechef/push_back 1/: ITGUY14.cpp  ITGUY15.cpp  ITGUY16.cpp  ITGUY17.cpp
Codechef/push_back 2/: A.cpp  ITGUY21.cpp  ITGUY23.cpp  ITGUY25.cpp  ITGUY26.cpp
Codeforces/: #1020b.cpp  #1030a.cpp  #1057a.cpp  #110a.cpp  #116a.cpp  #1196A.cpp  #122a.cpp  #125 b.cpp  #125 b1.cpp  #131a.cpp  #1324B.py  #1326a.cpp  #1327a.cpp  #1328C.cpp  #1335a.cpp  #1335c.cpp  #1342A.cpp  #1345a.cpp  #1345b.cpp  #1353c.cpp  #1360c.cpp  #1366a.cpp  #136a.cpp  #1374c.cpp  #1399A.cpp  #1400A.cpp  #1409A.cpp  #1409b.cpp  #1472b.cpp  #1472c.cpp  #1472d.cpp  #148a.cpp  #1490c.cpp  #1505C.cpp  #1520c.cpp  #1521a.cpp  #1525a.cpp  #1525b.cpp  #1526c1.cpp  #1536a.cpp  (+78 more)
Codeforces/Codeforces Beta Round #1/: a.cpp
Codeforces/Codeforces Beta Round #87 (Div. 1 Only)/: a.cpp
Codeforces/Codeforces Global Round 14/: a.cpp
Codeforces/Codeforces Global Round 15/: a.cpp
Codeforces/Codeforces LATOKEN Round 1 (Div. 1 + Div. 2)/: a.cpp
Codeforces/Codeforces Round #119 (Div. 2)/: 189A.cpp
Codeforces/Codeforces Round #186 (Div. 2)/: 313b.c  313b.cpp
Codeforces/Codeforces Round #267 (Div. 2)/: 467b.cpp
Codeforces/Codeforces Round #277.5 (Div. 2)/: b.cpp
Codeforces/Codeforces Round #367 (Div. 2)/: b.cpp
Codeforces/Codeforces Round #464 (Div. 2)/: a.cpp
Codeforces/Codeforces Round #470 (rated, Div. 2, based on VK Cup 2018 Round 1)/: a.cpp
Codeforces/Codeforces Round #640 (Div. 4)/: A.c  A.cpp  C.cpp
Codeforces/Codeforces Round #674 (Div. 3)/: a.cpp  b.cpp
Codeforces/Codeforces Round #759/: a.cpp  (+2 more)
(+59 files in other folders)
